# ferrodispcalc

./: .buildinfo  .gitignore  README.md  TODO.md  ferrodispcalc.compute.html  ferrodispcalc.html  ferrodispcalc.io.html  ferrodispcalc.plotter.html  ferrodispcalc.sed.html  ferrodispcalc.vis.html  gallery.html  genindex.html  index.html  install.sh  installation.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  todo.md  verify_fix.py
.doctrees/: environment.pickle  ferrodispcalc.compute.doctree  ferrodispcalc.doctree  ferrodispcalc.io.doctree  ferrodispcalc.plotter.doctree  ferrodispcalc.sed.doctree  ferrodispcalc.vis.doctree  gallery.doctree  index.doctree  installation.doctree  modules.doctree
.doctrees/tutorials/: ase.doctree  dielectric.doctree  example_aln.doctree  example_molecular.doctree  example_perov_superlattice.doctree  fdc.doctree  index.doctree  parse_cp2k.doctree  parse_lammps_output.doctree  sed.doctree  space_visualization.doctree
.github/workflows/: docs.yaml  docs.yml  test.yaml
_modules/: index.html
_modules/ferrodispcalc/: compute.html  config.html  io.html  neighborlist.html  vis.html
_sources/: ferrodispcalc.compute.rst  ferrodispcalc.io.rst  ferrodispcalc.plotter.rst  ferrodispcalc.rst  ferrodispcalc.rst.txt  ferrodispcalc.sed.rst.txt  index.rst  installation.rst.txt  modules.rst.txt
_sources/tutorials/: ase.rst.txt  dielectric.rst.txt  example_aln.rst.txt  example_perov_superlattice.rst.txt  parse_cp2k.rst.txt  parse_lammps_output.rst.txt  (+2 more)
docs/: conf.py  index.rst  requirements.txt
getting-started/: index.html  install.html  quick_start.html
src/: basic.hpp  get_averaged_structure.cpp
tests/: test_averaged_structure.py  test_dielectric.py  test_displacement.py  test_grid_data.py  test_io_lmp_dump.py  test_io_lmp_log.py  test_neighbor_list.py  test_octahedral_tilt.py  test_polarization.py  test_space_animation.py
tutorials/: ase.html  dielectric.html  example_aln.html  example_molecular.html  example_perov_superlattice.html  fdc.html  index.html  parse_cp2k.html  parse_lammps_output.html  sed.html  space_visualization.html
(+90 files in other folders)
