[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "ferrodispcalc"
dynamic = ["version"]
description = "Ferroelectric displacement calculation utilities"
requires-python = ">=3.9"
readme = "README.md"
authors = [ { name = "MoseyQAQ" } ]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy",
    "matplotlib",
    "ase",
    "pymatgen",
    "dpdata",
    "scienceplots"
]

[project.urls]
"Homepage" = "https://github.com/MoseyQAQ/ferrodispcalc"

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { where = ["src"] } }
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "ferrodispcalc.__version__" }

[project.optional-dependencies]
test = ['pytest']
vis = ["vispy", "PySide6", "PyOpenGL"]